# skland-api

./: Makefile  README.md  pyproject.toml
example/: get_credential.py  get_player_info.py
skland/api/: __init__.py  auth.py  client.py  game.py
skland/api/v1/: __init__.py  auth.py  client.py  game.py
skland/model/: exception.py
